kubernetes/rosetta/rosetta.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rosetta-tna
  namespace: etna
spec:
  selector:
    matchLabels:
      app: rosetta-tna
  revisionHistoryLimit: 1
  replicas: 1
  progressDeadlineSeconds: 600
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: rosetta-tna
    spec:
      terminationGracePeriodSeconds: 60
      volumes:
        - name: rosetta-config
          configMap:
            name: rosetta-config
      containers:
        - name: rosetta
          image: public.ecr.aws/v3w7q3a1/rosetta:tna-media-1.0.0
          imagePullPolicy: Always
          ports:
            - name: rosetta-port
              containerPort: 4923
              protocol: TCP
          volumeMounts:
            - name: rosetta-config
              mountPath: /rosetta/config
          resources:
            requests:
              memory: 4Gi
---
apiVersion: v1
kind: Service
metadata:
  name: rosetta-service
  namespace: etna
spec:
  type: ClusterIP
  selector:
    app: rosetta-tna
  ports:
    - protocol: TCP
      port: 4923
      targetPort: 4923
      name: rosetta-port
