kubernetes/rosetta/cantaloupe_ciim_ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tna-ingress-cantaloupe
  namespace: etna
  annotations:
    konghq.com/strip-path: "true"
    konghq.com/preserve-host: "false"
    kubernetes.io/ingress.class: kong
spec:
  rules:
    - host: tna.ciim.k-int.com
      http:
        paths:
          - path: /image/iiif/3
            pathType: Prefix
            backend:
              service:
                name: cantaloupe-tna-service
                port:
                  name: cantaloupe-port
